PLUGINWIZARD-39 : Bootstrap integratrion for Lutece v4 - Work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@46158 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_admin_feature.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_admin_feature.html
@@ -26,21 +26,21 @@
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_create_admin_feature.labelFeatureTitle} : </label>                
                     <div class="controls">      
-                        <input class="input-xlarge" type="text" name="feature_title" value="${plugin_model.pluginName}.adminFeature.${plugin_model.pluginName}_management.name" size="30" />                <br />                                           
+                        <input class="input-xxlarge" type="text" name="feature_title" value="${plugin_model.pluginName}.adminFeature.${plugin_model.pluginName}_management.name" size="30" />                <br />                                           
                     </div>
                 </div>
 
                 <div class="control-group">                                                         
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_create_admin_feature.labelFeatureDescription} : </label>                 
                     <div class="controls">        
-                        <input class="input-xlarge" type="text" name="feature_description" value="${plugin_model.pluginName}.adminFeature.${plugin_model.pluginName}_management.description" size="30" />                <br />                            
+                        <input class="input-xxlarge" type="text" name="feature_description" value="${plugin_model.pluginName}.adminFeature.${plugin_model.pluginName}_management.description" size="30" />                <br />                            
                     </div>
                 </div>
 
                 <div class="control-group">
                     <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_admin_feature.labelFeatureLevel} :  </label>               
                     <div class="controls">             
-                        <select class="input-xlarge" name="feature_level">    				           
+                        <select class="input-xxlarge" name="feature_level">    				           
                             <option value="0" >#i18n{pluginwizard.pluginwizard_create_admin_feature.labelLevel0}           
                             </option>    				           
                             <option value="1" >#i18n{pluginwizard.pluginwizard_create_admin_feature.labelLevel1}           
@@ -56,11 +56,11 @@
                     <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_admin_feature.labelFeatureUrl} :         
                     </label>          
                     <div class="controls">            
-                        <input class="input-xlarge" type="text" name="feature_url" value="jsp/admin/plugins/${plugin_model.pluginName}/Manage${plugin_model.pluginName?cap_first}sHome.jsp" size="30" />                     
+                        <input class="input-xxlarge" type="text" name="feature_url" value="jsp/admin/plugins/${plugin_model.pluginName}/Manage${plugin_model.pluginName?cap_first}sHome.jsp" size="30" />                     
                     </div>             
                 </div>                    
                 <div class="form-actions">                                                  
-                    <button type="submit" class="btn-primary">
+                    <button type="submit" class="btn btn-primary">
                         #i18n{pluginwizard.pluginwizard_create_admin_feature.buttonCreateFeature}       
                     </button>                           
                     <button type="submit" name="goToManageAdminFeatures" class="btn">
