--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_recapitulate.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_recapitulate.html
@@ -1,96 +1,79 @@
-<div class="span-15 prepend-1 append-bottom ">              
-    <div class="portlet-background-header -lutece-border-radius-top">#i18n{pluginwizard.pluginwizard_plugin_recapitulate.pageTitle} - #i18n{pluginwizard.pluginwizard_create_plugin.labelStepOf}   #i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelGenerateStep}
-    </div>                 
-    <div class="portlet-background-content">  
+<#include "sidebar.html" />   
 
-<div id="main-screen">
+<div class="row">
 
-<div class="success">#i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelSummary}
-#i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelPluginName} : <h2><#if plugin_model.pluginName??>${plugin_model.pluginName}</#if></h2></div>
-<fieldset>
-					<legend>#i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelXPages}</legend>
-					<div class="span-2 last">
-								<#if plugin_applications?? > 
-                <ul><#list plugin_applications as
-				plugin_application > <li>${plugin_application.applicationName}</li>
-      </#list> 
-      </ul>
-		</#if>
-					</div>
-				</fieldset>
-<fieldset>
-					<legend>#i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelPortlets}</legend>
-					<div class="span-3">
-          		<#if plugin_portlets?? >
-              <ul> <#list plugin_portlets as plugin_portlet >
-				<li>${plugin_portlet.pluginPortletClass}</li>
-			</#list>
-			</ul>
-		</#if>
-	
-					</div>
-	
-</fieldset>
+    <div class="span3">             
+        <@sidebar step="generate" />
+        <div class="portlet-background-content">         
+            #i18n{pluginwizard.pluginwizard_plugin_recapitulate.pageHelp} 
+        </div>  
+    </div>
 
-<fieldset>
-					<legend>#i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelAdminFeatures}</legend>
-					<div class="span-3">
-						<#if admin_features?? > 
-						<ul>
-			<#list admin_features as feature >
-				<li>${feature.pluginFeatureDescription}</li>
-			</#list> 
-			</ul>
-		</#if>
-					</div>
-			
-</fieldset>
-<fieldset>
-					<legend>#i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelBusinessClasses}</legend>
-					<div class="span-3">
+    <div class="span8">
+        <h4>#i18n{pluginwizard.pluginwizard_plugin_recapitulate.pageTitle} - #i18n{pluginwizard.pluginwizard_create_plugin.labelStepOf}   #i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelGenerateStep}</h4>                 
 
-<#if business_classes?? > 
-<ul>
-			<#list business_classes as business >
-			<li>	${business.businessClass}</li>
-			</#list> 
-	</ul>
-	</#if>
-					</div>
-	
-</fieldset>
-	</div>
-<div class="portlet-background-content -lutece-border-radius-bottom push-0 last">
-<td> 
-<form method="post"
-	action="jsp/site/plugins/pluginwizard/DownloadZip.jsp"><input
-	type="hidden" name="page" value="wizard" /> 
-	<input type="hidden"
-	name="action" value="zip" /> <input type="hidden" name="plugin_id"
-	value="${plugin_id}" />
-<button type="submit"	class="-lutece-input -lutece-border-radius-mini">
-#i18n{pluginwizard.pluginwizard_plugin_recapitulate.buttonGenerate}
-</button>
-</form>
-<form class="default-form" method="post" name="generate"
-	action="jsp/site/Portal.jsp"><input
-	type="hidden" name="page" value="pluginwizard" />
-	 <input type="hidden"
-	name="plugin_id" value="${plugin_id}" />
-<button type="submit" name="goToManagePluginPortlets" class="-lutece-input -lutece-border-radius-mini">#i18n{pluginwizard.pluginwizard_plugin_recapitulate.buttonBack}</button>
+        #i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelSummary}
+        #i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelPluginName} : 
+        <h5><#if plugin_model.pluginName??>${plugin_model.pluginName}</#if></h5>
+        <fieldset>
+            <legend>#i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelAdminFeatures}</legend>
+            <div class="span-3">
+                <#if admin_features?? > 
+                <ul>
+                    <#list admin_features as feature >
+                    <li>${feature.pluginFeatureDescription}</li>
+                    </#list> 
+                </ul>
+                </#if>
+            </div>
+        </fieldset>
+
+        <fieldset>
+            <legend>#i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelBusinessClasses}</legend>
+            <div class="span-3">
+
+                <#if business_classes?? > 
+                <ul>
+                    <#list business_classes as business >
+                    <li>	${business.businessClass}</li>
+                    </#list> 
+                </ul>
+                </#if>
+            </div>
+        </fieldset>
+
+        <fieldset>
+            <legend>#i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelXPages}</legend>
+            <div class="span-2 last">
+                <#if plugin_applications?? > 
+                <ul><#list plugin_applications as plugin_application > 
+                    <li>${plugin_application.applicationName}</li>
+                    </#list> 
+                </ul>
+                </#if>
+            </div>
+        </fieldset>
+
+        <fieldset>
+            <legend>#i18n{pluginwizard.pluginwizard_plugin_recapitulate.labelPortlets}</legend>
+            <div class="span-3">
+                <#if plugin_portlets?? >
+                <ul> <#list plugin_portlets as plugin_portlet >
+                    <li>${plugin_portlet.pluginPortletClass}</li>
+                    </#list>
+                </ul>
+                </#if>
+            </div>
+        </fieldset>
 
 
-</form>
-</td>
-</div>
-</div>
-</div>
-
-<div id="sidebar" class="span-6 append-1 prepend-1 append-bottom last portlet-background">       
-  <div class="portlet-background-header -lutece-border-radius-top">#i18n{pluginwizard.pluginwizard_create_plugin.labelInformation}
-  </div>         
-  <ul><li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelCreationStep}</li><li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelDescriptionStep}</li><li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelFeaturesStep}</li><li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelBusinessStep}</li><li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelXPageStep}</li><li>#i18n{pluginwizard.pluginwizard_create_plugin_application.labelPortletsStep}</li><li><img src="images/local/skin/buttons/show.png">#i18n{pluginwizard.pluginwizard_create_plugin_application.labelGenerateStep}</li>       
-  </ul>         
-  <div class="portlet-background-content">      
-   #i18n{pluginwizard.pluginwizard_plugin_recapitulate.pageHelp}  </div>
+        <div class="form-actions">
+            <a class="btn btn-primary" href="jsp/site/Portal.jsp?page=pluginwizard&plugin_id=${plugin_id}" >
+                #i18n{pluginwizard.pluginwizard_plugin_recapitulate.buttonBack}
+            </a>
+            <a class="btn btn-primary" href="jsp/site/plugins/pluginwizard/DownloadZip.jsp?page=wizard&action=zip&plugin_id=${plugin_id}" >
+                #i18n{pluginwizard.pluginwizard_plugin_recapitulate.buttonGenerate}
+            </a>
+        </div>
+    </div>
 </div>
